<resources>
    <string name="app_name">玩安卓</string>
    <string name="des_splash">广告图</string>
    <string name="des_ads_time">5s</string>
    <string name="author">橙子</string>
    <string name="next_time">下次再说</string>
    <string name="now_download">立即下载</string>
    <string name="version_title">发现新版本</string>
    <string name="navi_home">首页</string>
    <string name="navi_one">公众号</string>
    <string name="navi_two">知识体系</string>
    <string name="navi_three">项目</string>
    <string name="navi_four">我的</string>
    <string name="search">搜索</string>
    <string name="shezhi">设置</string>
    <string name="zhanweizifu">占位字符</string>
    <string name="empty">暂无数据</string>
    <string name="search_hot">热搜</string>
    <string name="search_history">搜索历史</string>
    <string name="tishi_sousuolishi">快来搜点干货吧o(*￣▽￣*)ブ</string>
    <string name="clear">清除</string>
    <string name="wechat">公众号</string>
</resources>
